2014-03-21 Added new text properties to check button
2014-03-21 Added checkAnswers and uncheckAnswers method to Player API
2014-03-21 Added command isAttempted to Text module
2014-03-21 New addon: Hierarchical_Lesson_Report
2014-03-19 Fixed issue with special characters external links in Text module
2014-03-19 Added getModules method to Player API
2014-03-19 Fixed problem with Tex in Video module
2014-03-19 Added Coloring module
2014-03-18 Fixed problem with links in page styles.
2014-03-18 Added sending events to Text Selection module
2014-03-17 Added addon Shape Tracing
2014-03-14 Added command isAttempted to choice
2014-03-12 Player can return first or last score
2014-03-11 Fixed problem with Animation module commands execution on PageLoaded event
2014-03-11 Player API extended to return page id
2014-03-07 Added AllOK event and isAllOK command in Text module
2014-03-07 Fixed problem with parsing addon properties
2014-03-07 Fixed issue with icon pages on navigation bar for mLibro. 
2014-03-07 New addon connecting dots and updated fractions
2014-03-06 Added enableAllGaps and disableAllGaps commands in Table module
2014-03-06 Added enableAllGaps and disableAllGaps commands in Text module
2014-03-06 Added injecting 'event' object into Advanced Connector module scripts
2014-03-04 Added property for external links target in Text module.
2014-03-05 Added 'Is disabled' property in Advanced Connector module
2014-03-04 Basic Math Gaps module: Fixed navigation arrows showing up when clicking on the input and fixed alert error in Editor when Is Equation flag has been set to true
2014-03-04 Fixed issue with external links in Text module.
2014-03-04 Fixed few bugs in eKeyboard i.a. on mobile devices system keyboard will not display anymore, added draggable
2014-03-04 Drag'n'drop with multiple gap fixed, no more doubled images.
2014-03-03 New addon: Count and Graph
2014-02-28 Add CSS class for selected page number in Table of Contents addon.