@@ -13,13 +13,10 @@ public class ScoreServiceTestCase {
 	public void totalScore() {
 		
 		ScoreService scoreService = new ScoreService(true);
-		PageScore pageScore1 = scoreService.getPageScore("Page 1");
-		pageScore1.setScore(3);
-		pageScore1.setMaxScore(5);
-		PageScore pageScore2 = scoreService.getPageScore("Page 2");
-		pageScore2.setScore(4);
-		pageScore2.setMaxScore(8);
-		
+		PageScore pageScore1 = new PageScore("Page 1", 3, 5);
+		scoreService.setPageScore(pageScore1);
+		PageScore pageScore2 = new PageScore("Page 2", 4, 8);
+		scoreService.setPageScore(pageScore2);
 		
 		assertEquals(7, scoreService.getTotalScore());
 		assertEquals(13, scoreService.getTotalMaxScore());
@@ -29,18 +26,15 @@ public class ScoreServiceTestCase {
 	public void historyFirst() {
 		
 		ScoreService scoreService = new ScoreService(false);
-		PageScore pageScore1 = scoreService.getPageScore("Page 1");
-		pageScore1.setScore(3);
-		pageScore1.setMaxScore(5);
-		scoreService.updateHistory("Page 1");
+		PageScore pageScore1 = new PageScore("Page 1", 3, 5);
+		scoreService.setPageScore(pageScore1);
 		assertEquals(3, scoreService.getTotalScore());
 		assertEquals(5, scoreService.getTotalMaxScore());
 
-		pageScore1 = scoreService.getPageScore("Page 1");
-		pageScore1.setScore(4);
-		pageScore1.setMaxScore(8);
+		pageScore1 = new PageScore("Page 1", 4, 8);
+		scoreService.setPageScore(pageScore1);
 		
-		PageScore pageScore = scoreService.getArchivedPageScore("Page 1");
+		PageScore pageScore = scoreService.getPageScore("Page 1");
 		assertEquals(3, pageScore.getScore(), 0.1);
 		assertEquals(5, pageScore.getMaxScore(), 0.1);
 	}
@@ -49,18 +43,15 @@ public class ScoreServiceTestCase {
 	public void historyLast() {
 		
 		ScoreService scoreService = new ScoreService(true);
-		PageScore pageScore1 = scoreService.getPageScore("Page 1");
-		pageScore1.setScore(3);
-		pageScore1.setMaxScore(5);
-		scoreService.updateHistory("Page 1");
+		PageScore pageScore1 = new PageScore("Page 1", 3, 5);
+		scoreService.setPageScore(pageScore1);
 		assertEquals(3, scoreService.getTotalScore());
 		assertEquals(5, scoreService.getTotalMaxScore());
 
-		pageScore1 = scoreService.getPageScore("Page 1");
-		pageScore1.setScore(4);
-		pageScore1.setMaxScore(8);
+		pageScore1 = new PageScore("Page 1", 4, 8);
+		scoreService.setPageScore(pageScore1);
 		
-		PageScore pageScore = scoreService.getArchivedPageScore("Page 1");
+		PageScore pageScore = scoreService.getPageScore("Page 1");
 		assertEquals(4, pageScore.getScore(), 0.1);
 		assertEquals(8, pageScore.getMaxScore(), 0.1);
 	}
