@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" ?> 
-<page layout='pixels' scoring="zeroOne">
+<page layout='pixels'>
 
 	<modules>
 		
